# ElasticArmAlgorithm

./: .gitignore  ElasticArmAlgorithm.hh  QuasiNewton.hh  README.md
examples/: CMakeLists.txt  test_QN.cxx  test_eaa.cxx
experimental/: ElasticArmAlgorithm.hh  QuasiNewton.hh
experimental/example/: CMakeLists.txt  test_QN.cxx  test_eaa.cxx
use-root/: EaaRootGsl.hh
use-root/examples/: CMakeLists.txt  eaa_macro.cxx  test_EAA.cxx
